# chat-service

./: .gitignore  go.mod
chat/: client.go  hub.go
cmd/: main.go
python-dev-client/: pyproject.toml
